Created process and example visualizations.
Signed-off-by: ChrisBrown46 <christopher.r.brown@aggiemail.usu.edu>

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,5 @@
 <!--
-	Christopher Brown
-	A01889018
-	christopher.r.brown@aggiemail.usu.edu
+	This site is from https://outrider.org/nuclear-weapons/interactive/bomb-blast/.
 -->
 
 <!doctype html>
@@ -18,9 +16,9 @@
 
 <body>
 
-	<h1> Hello World! This is an example page. </h1>
-	
 	<script src="js/main.js"></script>
+
+  <iframe src="https://outrider.org/nuclear-weapons/interactive/bomb-blast/?airburst=true&bomb=3&lat=40.72&location=New%20York%2C%20New%20York%2010002%2C%20United%20States&long=-73.99" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
 
 </body>
 </html>
