--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,46 @@
 <head>
 
 	<meta charset="UTF-8">
-	<title> Project </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
-	<script src="https://d3js.org/d3.v4.js"></script>
+	<script src="https://d3js.org/d3.v5.js"></script>
+
+	<title> Dem Boiz Team Project </title>
 
 </head>
 
 <body>
 
-	<script src="js/main.js"></script>
+	<!-- Top Section Contains Battle Navigation -->
+	<div id="battle-navigation-div"></div>
 
-  <iframe src="https://outrider.org/nuclear-weapons/interactive/bomb-blast/?airburst=true&bomb=3&lat=40.72&location=New%20York%2C%20New%20York%2010002%2C%20United%20States&long=-73.99" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+	<div id="visualization-wrapper">
+		<!-- Left Section Contains Visualizations -->
+		<div id="visualizations">
+			<h1 class="display-4">
+				Visualizations
+			</h1>
+		</div>
+		
+		<!-- Right Side Contains ScrollyTelly -->
+		<div id="story"></div>
+	</div>
+
+	<!-- Bootstrap JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	
+	<script src="js/waypoints/noframework.waypoints.min.js"></script>
+	<script src="js/storyBuilder.js"></script>
+	<script src="js/waypointBuilder.js"></script>
+	<script src="js/battleNavigationChart.js"></script>
+	<script src="js/script.js"></script>
 
 </body>
 </html>
