--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
 	<script src="https://d3js.org/d3.v5.js"></script>
+	<script src="js/topojson.min.js"></script>
 
 	<title> Dem Boiz Team Project </title>
 
@@ -26,11 +27,7 @@
 
 	<div id="visualization-wrapper">
 		<!-- Left Section Contains Visualizations -->
-		<div id="visualizations">
-			<h1 class="display-4">
-				Visualizations
-			</h1>
-		</div>
+		<div id="map-div"></div>
 		
 		<!-- Right Side Contains ScrollyTelly -->
 		<div id="story"></div>
@@ -43,9 +40,11 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	
 	<script src="js/waypoints/noframework.waypoints.min.js"></script>
+
 	<script src="js/storyBuilder.js"></script>
 	<script src="js/waypointBuilder.js"></script>
 	<script src="js/battleNavigationChart.js"></script>
+	<script src="js/worldMap.js"></script>
 	<script src="js/script.js"></script>
 
 </body>
