Added paragraphs and pictures for my portion of process.md.

--- a/src/popup.html
+++ b/src/popup.html
@@ -25,14 +25,7 @@
   </head>
   
   <body>
-    <div id="popupDiv" class="ui-widget-content">
-      <div id="dropdown">
-        <select name="category" id="category"></select>
-      </div>
-      <svg id="chart" height="275" width="350">
-        <g></g>
-      </svg>
-    </div>
+    <div id="map-div"></div>
   </body>
   <script src="js/popupChart.js"></script>
   </html>
