--- a/src/index.html
+++ b/src/index.html
@@ -22,20 +22,16 @@
 
 	<div id="visualization-wrapper">
 		<!-- Left Section Contains Visualizations -->
-		<div id="map-div"></div>
+		<div id="map-div">
+			<div class="inner" id="test" style="top: 19.99vh;"></div>
+			<div class="inner" style="top: 46.55vh;"></div>
+			<div class="inner" style="top: 73.13vh;"></div>
+		</div>
 		
 		<!-- Right Side Contains ScrollyTelly -->
 		<div id="story"></div>
 	</div>
 
-	<!-- Bootstrap JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	
 	<script src="js/waypoints/noframework.waypoints.min.js"></script>
 
 	<script src="js/storyBuilder.js"></script>
