Select box disables appropriately and styling is bad but hey that's okay 2am is never too late to fix something.

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
 	<div id="visualization-wrapper">
 		<!-- Left Section Contains Visualizations -->
 		<div id="map-div">
-			<div class="inner" id="test" style="top: 19.99vh;"></div>
-			<div class="inner" style="top: 46.55vh;"></div>
-			<div class="inner" style="top: 73.13vh;"></div>
+			<div class="inner" id="chartDiv1" style="top: 19.99vh;"></div>
+			<div class="inner" id="chartDiv2" style="top: 46.55vh;"></div>
+			<div class="inner" id="chartDiv3" style="top: 73.13vh;"></div>
 		</div>
 		
 		<!-- Right Side Contains ScrollyTelly -->
