--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
 	<script src="https://d3js.org/d3.v5.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 	<title> Dem Boiz Team Project </title>
 
@@ -39,8 +40,8 @@
 	<script src="js/battleNavigationChart.js"></script>
 	<script src="js/topojson.min.js"></script>
 	<script src="js/worldMap.js"></script>
-	<script src="js/script.js"></script>
 	<script src="js/popupChart.js"></script>
+	<script src="js/script.js"></script>
 
 </body>
 </html>
