updated to link to github and youtube
Signed-off-by: ChrisBrown46 <christopher.r.brown@aggiemail.usu.edu>

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,12 @@
 </head>
 
 <body>
-
+	<div id="nav">
+		<a href="http://chrisbrown46.surge.sh/"> Website </a>
+		<a href="https://github.com/ChrisBrown46/CS5890_Project"> GitHub </a>
+		<a href="https://youtu.be/glzqH6h17Qg"> Demo </a>
+	</div>
+	
 	<!-- Top Section Contains Battle Navigation -->
 	<div id="battle-navigation-div"></div>
 
